# MinimalOpenGL

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
cmake-modules/: FindGLEW.cmake  FindGLFW3.cmake
include/: Buffer.h  Shader.h
shaders/: fragment.glsl  vertex.glsl
source/: main.cpp
